--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -30,4 +30,4 @@ jobs:
           curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/HEAD/install.sh | sh -s -- -b $(go env GOPATH)/bin v2.4.0
 
       - name: Run Linter
-        run: golangci-lint run --timeout 10m --verbose 
+        run: golangci-lint run --timeout 10m --verbose --config .golangci.yaml 
