fix: Update GH workflows

--- a/.github/workflows/golangci-lint.yaml
+++ b/.github/workflows/golangci-lint.yaml
@@ -5,11 +5,13 @@ on:
     types: [opened, edited, synchronize, reopened]
     paths-ignore:
       - '.github/**'
+      - 'charts/**'
   push:
     branches:
       - '**'
     paths-ignore:
       - '.github/**'
+      - 'charts/**'
 
 jobs:
   lint:
