--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -7,11 +7,13 @@ on:
       - main
     paths-ignore:
       - '.github/**'
+      - 'charts/**'
   push:
     branches:
       - main
     paths-ignore:
       - '.github/**'
+      - 'charts/**'
 
 jobs:
   verify:
