--- a/charts/kubemox/templates/crds/virtualmachinetemplates.yaml
+++ b/charts/kubemox/templates/crds/virtualmachinetemplates.yaml
@@ -228,10 +228,12 @@ spec:
                   cores:
                     default: 2
                     description: Cores
+                    minimum: 1
                     type: integer
                   memory:
                     default: 2048
                     description: Memory as MB
+                    minimum: 16
                     type: integer
                   network:
                     properties:
@@ -245,6 +247,7 @@ spec:
                   sockets:
                     default: 1
                     description: Sockets
+                    minimum: 1
                     type: integer
                   storage:
                     default: local-lvm
