--- a/config/crd/bases/proxmox.alperen.cloud_customcertificates.yaml
+++ b/config/crd/bases/proxmox.alperen.cloud_customcertificates.yaml
@@ -100,7 +100,9 @@ spec:
                     type: boolean
                 type: object
             required:
+            - certManagerSpec
             - connectionRef
+            - proxmoxCertSpec
             type: object
             x-kubernetes-validations:
             - message: ConnectionRef is required once set
