--- a/charts/kubemox/templates/crds/virtualmachines.yaml
+++ b/charts/kubemox/templates/crds/virtualmachines.yaml
@@ -159,6 +159,7 @@ spec:
                 properties:
                   cores:
                     description: Cores is the number of CPU cores
+                    minimum: 1
                     type: integer
                   disk:
                     description: Disks is the list of disks
@@ -169,6 +170,7 @@ spec:
                           type: string
                         size:
                           description: Size is the size of the disk in GB
+                          minimum: 1
                           type: integer
                         storage:
                           description: Storage is the name of the storage
@@ -181,6 +183,7 @@ spec:
                     type: array
                   memory:
                     description: Memory is the amount of memory in MB
+                    minimum: 16
                     type: integer
                   name:
                     description: Name of the template
@@ -227,9 +230,13 @@ spec:
                       required:
                       - type
                       type: object
+                      x-kubernetes-validations:
+                      - message: pcie cannot be true when device type is mapped
+                        rule: self.type != 'mapped' || self.pcie == false
                     type: array
                   socket:
                     description: Socket is the number of CPU sockets
+                    minimum: 1
                     type: integer
                 type: object
               vmSpec:
@@ -327,6 +334,7 @@ spec:
                         && has(self.passwordFrom)) || (!has(self.password) && !has(self.passwordFrom))
                   cores:
                     description: Cores is the number of CPU cores
+                    minimum: 1
                     type: integer
                   disk:
                     description: Disks is the list of disks
@@ -337,6 +345,7 @@ spec:
                           type: string
                         size:
                           description: Size is the size of the disk in GB
+                          minimum: 1
                           type: integer
                         storage:
                           description: Storage is the name of the storage
@@ -349,6 +358,7 @@ spec:
                     type: array
                   memory:
                     description: Memory is the amount of memory in MB
+                    minimum: 16
                     type: integer
                   network:
                     description: Networks is the list of networks
@@ -400,9 +410,14 @@ spec:
                       required:
                       - type
                       type: object
+                      x-kubernetes-validations:
+                      - message: pcie cannot be true when device type is mapped
+                        rule: self.type != 'mapped' || self.pcie == false
                     type: array
                   socket:
+                    default: 1
                     description: Socket is the number of CPU sockets
+                    minimum: 1
                     type: integer
                 type: object
             required:
@@ -413,6 +428,10 @@ spec:
             x-kubernetes-validations:
             - message: ConnectionRef is required once set
               rule: '!has(oldSelf.connectionRef) || has(self.connectionRef)'
+            - message: One of template or vmSpec must be specified
+              rule: has(self.template) || has(self.vmSpec)
+            - message: template and vmSpec are mutually exclusive
+              rule: '!has(self.template) || !has(self.vmSpec)'
           status:
             description: VirtualMachineStatus defines the observed state of VirtualMachine
             properties:
